# modbus485_debugger

./: .gitignore  Cargo.toml  README.md  changelog.txt  release.sh  rustfmt.toml
src/: gui.rs  main.rs  serial_interface.rs  utils.rs
