[package]
name = "modbus_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = "0.10.0"
iced_native = "0.10.3"
log = "0.4.20"
serial = "0.4.0"
serialport = "4.3.0"
futures = "0.3.30"
async-channel = "2.2.0"
iced_futures = "0.7.0"
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros", "time"] }
fern = "0.6.2"
chrono = "0.4.33"
colored = "2.1.0"
hex = "0.4.3"
iced_table = "0.2.0"

