[package]
name = "serial_sniffer"
version = "0.1.0"
edition = "2021"


[dependencies]
iced = "0.10.0"
iced_native = "0.10.3"
log = "0.4.20"
serialport = "4.3.0"
futures = "0.3.30"
iced_futures = "0.7.0"
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros", "time"] }
fern = "0.6.2"
chrono = "0.4.33"
colored = "2.1.0"
hex = "0.4.3"
iced_table = "0.2.0"
serial-thread = "0.0.4"

